# Dolphin-Netplay-Core

./: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Core/AudioCommon/: AudioCommon.cpp  CMakeLists.txt  LibretroSoundStream.cpp  LibretroSoundStream.h
Source/Core/Common/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  WindowSystemInfo.h
Source/Core/Common/GL/: GLContext.cpp  GLContext.h
Source/Core/Common/GL/GLInterface/: Libretro.cpp  Libretro.h
Source/Core/Core/: CMakeLists.txt
Source/Core/Core/Config/: MainSettings.h  NetplaySettings.cpp
Source/Core/Core/HW/: GCPadEmu.cpp
Source/Core/Core/HW/WiimoteEmu/: WiimoteEmu.cpp
Source/Core/Core/HW/WiimoteEmu/Extension/: Nunchuk.cpp
Source/Core/DolphinLibretro/: CMakeLists.txt  libretro.cpp
Source/Core/InputCommon/: CMakeLists.txt  LibretroInput.cpp  LibretroInput.h
Source/Core/InputCommon/ControllerInterface/: ControllerInterface.cpp  ControllerInterface.h
Source/Core/InputCommon/ControllerInterface/Libretro/: Libretro.cpp  Libretro.h
Source/Core/VideoBackends/OGL/: OGLGfx.cpp  OGLMain.cpp
Source/Core/VideoCommon/: CMakeLists.txt  VideoBackendBase.cpp
Source/Core/VideoCommon/GraphicsModSystem/Runtime/: CustomShaderCache.cpp
Source/Core/VideoCommon/Resources/: CustomResourceManager.cpp
